test/corpus/annotation_multiple_as_list.sdm
============================
Annotation, Multiple as list
============================

module corpus_test_annotation is

  @dc:seeAlso = {ordered nonunique} [
      <https://www.dublincore.org/>
      <https://www.dublincore.org/specifications/dublin-core/dcmi-terms/>
  ]

end

---

(module
  (identifier)
  (module_body
    (annotation
      (annotation_property
        (identifier_reference
          (qualified_identifier
            (identifier)
            (identifier)))
        (value
          (sequence_of_values
            (sequence_ordering)
            (sequence_uniqueness)
            (simple_value
              (iri))
            (simple_value
              (iri))))))))
