test/corpus/annotation_multiple_integer.sdm
=============================
Annotation, Multiple Integers
=============================

module Campaign is

  @dc:version = [ 1 2 3 ]

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
        value: (value
          (sequence_of_values
            (simple_value (integer))
            (simple_value (integer))
            (simple_value (integer))))))))
