test/corpus/annotation_multiple_ordered.sdm
============================
Annotation, Multiple ordered
============================

module corpus_test_annotation is

  @dc:seeAlso = {ordered} [
      <https://www.dublincore.org/>
      <https://www.dublincore.org/specifications/dublin-core/dcmi-terms/>
  ]

end

---

(module
  (identifier)
  (module_body
    (annotation
      (annotation_property
        (identifier_reference
          (qualified_identifier
            (identifier)
            (identifier)))
        (value
          (sequence_of_values
            (sequence_ordering)
            (simple_value
              (iri))
            (simple_value
              (iri))))))))
