test/corpus/annotation_multiple_separate.sdm
=============================
Annotation, Multiple Separate
=============================

module corpus_test_annotation is

  @skos:prefLabel = ""

  @skos:altLabel = ""@en

  @dc:version = 3

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
        value: (value
          (simple_value
             (string
               (quoted_string))))))
    (annotation
      (annotation_property
        name: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
        value: (value
          (simple_value
            (string
              (quoted_string)
              language: (language_tag))))))
    (annotation
      (annotation_property
        name: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
        value: (value
          (simple_value
            (unsigned)))))))
