test/corpus/annotation_single_binary.sdm
=========================
Annotation, Single Binary
=========================

module Campaign is

  @dc:author = #[
    52  32  39  76  5a  43  42  43    65  57  55  67  51  33  4a  31
    5a  57  77  67  56  32  39  79    62  47  51  4b
  ]

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
        (qualified_identifier
          module: (identifier)
          member: (identifier)))
           value: (value
             (simple_value
                (binary)))))))
