test/corpus/annotation_single_boolean.sdm
==========================
Annotation, Single Boolean
==========================

module corpus_test_annotation is

  @dc:published = false

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
        (qualified_identifier
          module: (identifier)
          member: (identifier)))
          value: (value
            (simple_value
              (boolean
                (boolean_falsity))))))))
