test/corpus/annotation_single_constructor.sdm
==============================
Annotation, Single Constructor
==============================

module corpus_test_annotation is

  @dc:author = xsd:positiveInteger(1)

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
        value: (value
          (value_constructor
             name: (identifier_reference
               (qualified_identifier
                 module: (identifier)
                 member: (identifier)))
             value: (simple_value
               (integer))))))))
