test/corpus/annotation_single_double.sdm
=========================
Annotation, Single Double
=========================

module Campaign is

  @dc:some = 1.2e-10
  
end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      name: (identifier_reference
              (qualified_identifier
                module: (identifier)
                member: (identifier)))
                 value: (value
                          (double)))))
