test/corpus/annotation_single_integer.sdm
==========================
Annotation, Single Integer
==========================

module Campaign is

  @dc:version = 2

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
         value: (value
           (simple_value
             (integer)))))))
