test/corpus/annotation_single_language_string.sdm
=========================================
Annotation, Single Language-Tagged String
=========================================

module Campaign is

  @dc:title = "a test"@en-US

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
        (qualified_identifier
          module: (identifier)
          member: (identifier)))
        value: (value
          (simple_value 
             (string
               (quoted_string)
               language: (language_tag))))))))
