test/corpus/annotation_single_rational.sdm
===========================
Annotation, Single Rational
===========================

module corpus_test_annotation is

  @dc:some = 3/4

end

---

(module
  name: (identifier)
  body: (module_body
    (annotation
      (annotation_property
        name: (identifier_reference
          (qualified_identifier
            module: (identifier)
            member: (identifier)))
        value: (value
          (simple_value
            (rational)))))))
