test/corpus/cardinality_two_to_eight.sdm
===================================
Structure, Cardinality two to eight
===================================

module corpus_test_cardinality is

  structure Things is
    thing -> {2..8} integer
  end

end

---

(module
  (identifier)
  (module_body
    (definition
      (structure_def
        (identifier)
        (structure_body
          (member
            (member_def
              (identifier)
              (cardinality_expression
                (unsigned)
                (cardinality_range
                  (unsigned)))
              (type_reference
                (builtin_simple_type)))))))))
