test/corpus/cardinality_zero_to_many_as_list.sdm
===========================================
Structure, Cardinality zero to many as-list
===========================================

module corpus_test_cardinality is

  structure Things is
    thing -> {ordered nonunique 0..} integer
  end

end

---

(module
  (identifier)
  (module_body
    (definition
      (structure_def
        (identifier)
        (structure_body
          (member
            (member_def
              (identifier)
              (cardinality_expression
                (sequence_ordering)
                (sequence_uniqueness)
                (unsigned)
                (cardinality_range))
              (type_reference
                (builtin_simple_type)))))))))
