test/corpus/cardinality_zero_to_many_ordered.sdm
===========================================
Structure, Cardinality zero to many ordered
===========================================

module corpus_test_cardinality is

  structure Things is
    thing -> {ordered 0..} integer
  end

end

---

(module
  (identifier)
  (module_body
    (structure_def
      (identifier)
      (structure_body
        (member
          (member_def
            (identifier)
            (cardinality_expression
              (sequence_ordering)
              (unsigned)
              (cardinality_range))
            (type_reference
              (builtin_types))))))))
