test/corpus/cardinality_zero_to_many_unique.sdm
==========================================
Structure, Cardinality zero to many unique
==========================================

module corpus_test_cardinality is

  structure Things is
    thing -> {unique 0..} integer
  end

end

---

(module
  (identifier)
  (module_body
    (structure_def
      (identifier)
      (structure_body
        (member
          (member_def
            (identifier)
            (cardinality_expression
              (sequence_uniqueness)
              (unsigned)
              (cardinality_range))
            (type_reference
              (builtin_types))))))))
