test/corpus/cardinality_zero_to_many_unordered.sdm
=============================================
Structure, Cardinality zero to many unordered
=============================================

module corpus_test_cardinality is

  structure Things is
    thing -> {unordered 0..} integer
  end

end

---

(module
  (identifier)
  (module_body
    (definition
      (structure_def
        (identifier)
        (structure_body
          (member
            (member_def
              (identifier)
              (cardinality_expression
                (sequence_ordering)
                (unsigned)
                (cardinality_range))
              (type_reference
                (builtin_simple_type)))))))))
