test/corpus/cardinality_zero_to_one.sdm
==================================
Structure, Cardinality zero to one
==================================

module corpus_test_cardinality is

  structure Things is
    thing -> {0..1} integer
  end

end

---

(module
  (identifier)
  (module_body
    (structure_def
      (identifier)
      (structure_body
        (member
          (member_def
            (identifier)
            (cardinality_expression
              (unsigned)
              (cardinality_range
                (unsigned)))
            (type_reference
              (builtin_types))))))))
